--- a/Snack-6/style.css
+++ b/Snack-6/style.css
@@ -1,14 +1,20 @@
 .category {
     display: inline-block;
     border-radius: .625rem;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .teachers {
-    background-color: grey;
+    background-color: lightgray;
     padding: 1rem;
 }
 
 .pm {
-    background-color: green;
+    background-color: lightgreen;
     padding: 1rem;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
